Improved distance computation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(iri_mediapipe_graph)
+project(iri_finger_pointing)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -8,7 +8,7 @@ find_package(catkin REQUIRED)
 # ******************************************************************** 
 #                 Add catkin additional components here
 # ******************************************************************** 
-find_package(catkin REQUIRED COMPONENTS iri_base_algorithm iri_skeleton_msgs cv_bridge image_transport camera_info_manager sensor_msgs tf geometry_msgs)
+find_package(catkin REQUIRED COMPONENTS iri_base_algorithm iri_skeleton_msgs cv_bridge image_transport camera_info_manager sensor_msgs tf geometry_msgs dynamic_reconfigure)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -34,10 +34,10 @@ find_package(catkin REQUIRED COMPONENTS iri_base_algorithm iri_skeleton_msgs cv_
 #                   COMMENT "Bulding mediapipe"
 #                   WORKING_DIRECTORY ${mediapipe_SOURCE_DIR})
 
-add_custom_command(OUTPUT libmediapipe.so
-                   COMMAND ${PROJECT_SOURCE_DIR}/scripts/set_mediapipe.sh ${PROJECT_SOURCE_DIR} 
-                   COMMENT "Setting up mediapipe"
-                   WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+# add_custom_command(OUTPUT libmediapipe.so
+#                    COMMAND ${PROJECT_SOURCE_DIR}/scripts/set_mediapipe.sh ${PROJECT_SOURCE_DIR} 
+#                    COMMENT "Setting up mediapipe"
+#                    WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
 #
 # ******************************************************************** 
@@ -63,7 +63,12 @@ add_custom_command(OUTPUT libmediapipe.so
 #   Action1.action
 #   Action2.action
 # )
-
+## Generate dynamic reconfigure parameters in the 'cfg' folder
+generate_dynamic_reconfigure_options(
+  cfg/Reconfig_params.cfg
+#   cfg/DynReconf1.cfg
+#   cfg/DynReconf2.cfg
+)
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
@@ -73,7 +78,7 @@ add_custom_command(OUTPUT libmediapipe.so
 # ******************************************************************** 
 #                 Add the dynamic reconfigure file 
 # ******************************************************************** 
-generate_dynamic_reconfigure_options(cfg/MediapipeGraph.cfg)
+# generate_dynamic_reconfigure_options(cfg/MediapipeGraph.cfg)
 
 # ******************************************************************** 
 #                 Add run time dependencies here
@@ -100,38 +105,38 @@ catkin_package(
 # ******************************************************************** 
 include_directories(include)
 include_directories(${catkin_INCLUDE_DIRS})
-include_directories(${CMAKE_BINARY_DIR}/mediapipe)
-include_directories(${CMAKE_BINARY_DIR}/mediapipe/bazel-bin)
-include_directories(${CMAKE_BINARY_DIR}/mediapipe/bazel-bin/../../../../../external/com_google_absl)
-include_directories(${CMAKE_BINARY_DIR}/mediapipe/bazel-bin/../../../../../external/com_google_protobuf/src/)
+# include_directories(${CMAKE_BINARY_DIR}/mediapipe)
+# include_directories(${CMAKE_BINARY_DIR}/mediapipe/bazel-bin)
+# include_directories(${CMAKE_BINARY_DIR}/mediapipe/bazel-bin/../../../../../external/com_google_absl)
+# include_directories(${CMAKE_BINARY_DIR}/mediapipe/bazel-bin/../../../../../external/com_google_protobuf/src/)
 # include_directories(${<dependency>_INCLUDE_DIRS})
 
 ## Declare a cpp library
 # add_library(${PROJECT_NAME} <list of source files>)
 
 ## Declare a cpp executable
-add_executable(${PROJECT_NAME} src/mediapipe_graph_alg.cpp src/mediapipe_graph_alg_node.cpp libmediapipe.so)
+# add_executable(${PROJECT_NAME} src/mediapipe_graph_alg.cpp src/mediapipe_graph_alg_node.cpp libmediapipe.so)
 
 # ******************************************************************** 
 #                   Add the libraries
 # ******************************************************************** 
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
-target_link_libraries(${PROJECT_NAME} ${CMAKE_BINARY_DIR}/mediapipe/bazel-bin/mediapipe/examples/desktop/libmediapipe.so)
+# target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
+# target_link_libraries(${PROJECT_NAME} ${CMAKE_BINARY_DIR}/mediapipe/bazel-bin/mediapipe/examples/desktop/libmediapipe.so)
 # target_link_libraries(${PROJECT_NAME} ${<dependency>_LIBRARIES})
 
-add_custom_command(TARGET ${PROJECT_NAME}
-                   POST_BUILD
-                   COMMAND ln -sfn ${CMAKE_BINARY_DIR}/mediapipe/mediapipe ~/.ros/mediapipe
-                   COMMENT "Creating mediapipe softlink at ROS_HOME"
-                   WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+# add_custom_command(TARGET ${PROJECT_NAME}
+#                    POST_BUILD
+#                    COMMAND ln -sfn ${CMAKE_BINARY_DIR}/mediapipe/mediapipe ~/.ros/mediapipe
+#                    COMMENT "Creating mediapipe softlink at ROS_HOME"
+#                    WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
 # ******************************************************************** 
 #               Add message headers dependencies 
 # ******************************************************************** 
 # add_dependencies(${PROJECT_NAME} <msg_package_name>_generate_messages_cpp)
-add_dependencies(${PROJECT_NAME} iri_skeleton_msgs_generate_messages_cpp)
-add_dependencies(${PROJECT_NAME} sensor_msgs_generate_messages_cpp)
+# add_dependencies(${PROJECT_NAME} iri_skeleton_msgs_generate_messages_cpp)
+# add_dependencies(${PROJECT_NAME} sensor_msgs_generate_messages_cpp)
 # ******************************************************************** 
 #               Add dynamic reconfigure dependencies 
 # ******************************************************************** 
-add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS})
+# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS})
